# duckstation

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CONTRIBUTORS.md  NEWS.md  NEWS_Pt-Br.md  NEWS_pt-br.md  README.md  README.pt-br.md  README_Pt-Br.md  appveyor.yml  duckstation-qt_zh-cn.ts  duckstation-uwp.sln  duckstation.sln  pse.sln
dep/: .gitattributes  CMakeLists.txt  PREBUILT-SHA256SUMS  PREBUILT-VERSION
dep/biscuit/: CMakeLists.txt  LICENSE.md  README.md  clang-format
dep/cpuinfo/: cpuinfo.vcxproj  cpuinfo.vcxproj.filters
dep/cubeb/: CMakeLists.txt  TODO  cubeb.vcxproj  cubeb.vcxproj.filters
dep/d3d12ma/: CMakeLists.txt  d3d12ma.vcxproj  d3d12ma.vcxproj.filters
dep/discord-rpc/: CMakeLists.txt  discord-rpc.vcxproj
dep/enet/: CMakeLists.txt  enet.vcxproj  enet.vcxproj.filters  git-revision.txt
dep/fast_float/: CONTRIBUTORS  README.md
dep/fmt/: fmt.vcxproj  fmt.vcxproj.filters
dep/freesurround/: CMakeLists.txt  freesurround.vcxproj  freesurround.vcxproj.filters
dep/ggpo-x/: CMakeLists.txt  LICENSE  ggpo-x.vcxproj  ggpo-x.vcxproj.filters
dep/glad/: CMakeLists.txt  glad.vcxproj  glad.vcxproj.filters
dep/glslang/: CMakeLists.txt  README.md  glslang.vcxproj  glslang.vcxproj.filters
dep/googletest/: CMakeLists.txt  googletest.vcxproj  googletest.vcxproj.filters
dep/gsl/: CMakeLists.txt  GSL.natvis
dep/imgui/: CHANGELOG.txt  CMakeLists.txt  LICENSE.txt  README.md  TODO.txt  imgui.vcxproj  imgui.vcxproj.filters
dep/kissfft/: CMakeLists.txt  kissfft.vcxproj  kissfft.vcxproj.filters
dep/lagoon/: CMakeLists.txt  LICENSE  lagoon.c
dep/libFLAC/: CMakeLists.txt  libFLAC.vcxproj  libFLAC.vcxproj.filters
dep/libchdr/: CMakeLists.txt  libchdr.vcxproj  libchdr.vcxproj.filters
dep/libcue/: CMakeLists.txt  ChangeLog  README.md  libcue.vcxproj  libcue.vcxproj.filters
dep/libjpeg/: CMakeLists.txt  libjpeg.vcxproj  libjpeg.vcxproj.filters
dep/libpng/: ANNOUNCE  CMakeLists.txt  libpng.vcxproj
dep/libretro-common/: CMakeLists.txt
dep/libsamplerate/: CMakeLists.txt  ChangeLog  NEWS  README.md  config.h.cmake  libsamplerate.spec.in  libsamplerate.vcxproj  libsamplerate.vcxproj.filters  samplerate.pc.in
dep/lzma/: CMakeLists.txt  lzma.vcxproj  lzma.vcxproj.filters
dep/minizip/: CMakeLists.txt  minizip.vcxproj  minizip.vcxproj.filters
dep/msvc/: .gitignore
dep/nativefiledialog/: CMakeLists.txt  README.md  nativefiledialog.vcxproj  nativefiledialog.vcxproj.filters
dep/rainterface/: RA_Interface.cpp  rainterface.vcxproj
dep/rapidyaml/: CMakeLists.txt  rapidyaml.vcxproj  rapidyaml.vcxproj.filters
dep/rcheevos/: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  rcheevos.vcxproj  rcheevos.vcxproj.filters
dep/reshadefx/: CMakeLists.txt  LICENSE.md  README.md  reshadefx.vcxproj  reshadefx.vcxproj.filters
dep/riscv-disas/: CMakeLists.txt  README.md  source.txt
dep/simpleini/: CMakeLists.txt  simpleini.vcxproj
dep/soundtouch/: CMakeLists.txt  soundtouch.vcxproj  soundtouch.vcxproj.filters
dep/spirv-cross/: CMakeLists.txt
dep/stb/: CMakeLists.txt  stb.vcxproj  stb.vcxproj.filters
dep/tinyxml2/: CMakeLists.txt  tinyxml2.vcxproj  tinyxml2.vcxproj.filters
dep/vixl/: CMakeLists.txt  vixl.vcxproj  vixl.vcxproj.filters
dep/vsprops/: Base.props  QtCompile.props  Win32Application.props
dep/vulkan/: CMakeLists.txt
dep/vulkan-loader/: CMakeLists.txt  vulkan-loader.vcxproj  vulkan-loader.vcxproj.filters
dep/winpixeventruntime/: CMakeLists.txt  WinPixEventRuntime.props
dep/xbyak/: CMakeLists.txt  readme.md  readme.txt
dep/xxhash/: CMakeLists.txt  LICENSE  xxhash.vcxproj  xxhash.vcxproj.filters
dep/zlib/: CMakeLists.txt  zlib.vcxproj  zlib.vcxproj.filters
dep/zstd/: CMakeLists.txt  zstd.vcxproj  zstd.vcxproj.filters
dep/zydis/: CMakeLists.txt  README.md  zydis.vcxproj  zydis.vcxproj.filters
src/: CMakeLists.txt
src/common/: CMakeLists.txt  align.h  assert.cpp  assert.h  audio.cpp  audio.h  audio_stream.cpp  audio_stream.h  bcdutils.h  binary_reader_writer.cpp  binary_reader_writer.h  binary_span_reader_writer.cpp  binary_span_reader_writer.h  bitfield.h  bitfield.natvis  bitutils.h  build_timestamp.h  byte_stream.cpp  byte_stream.h  cd_image.cpp  cd_image.h  cd_image_bin.cpp  cd_image_chd.cpp  cd_image_cue.cpp  cd_image_cuesheet.cpp  cd_image_device.cpp  cd_image_ecm.cpp  cd_image_hasher.cpp  cd_image_hasher.h  cd_image_m3u.cpp  cd_image_mds.cpp  cd_image_memory.cpp  cd_image_pbp.cpp  cd_image_ppf.cpp  cd_subchannel_replacement.cpp  cd_subchannel_replacement.h  cd_xa.cpp  cd_xa.h  cocoa_tools.h  cocoa_tools.mm  (+149 more)
src/common-tests/: CMakeLists.txt  binary_reader_writer_tests.cpp  bitutils_tests.cpp  common-tests.vcxproj  common-tests.vcxproj.filters  event_tests.cpp  file_system_tests.cpp  gsvector_tests.cpp  gsvector_yuvtorgb_test.cpp  hash_tests.cpp  heap_array_tests.cpp  misc_tests.cpp  path_tests.cpp  rectangle_tests.cpp  sha256_tests.cpp  small_string_tests.cpp  string_pool_tests.cpp  string_tests.cpp
src/core/: CMakeLists.txt  achievements.cpp  achievements.h  achievements_private.h  analog_controller.cpp  analog_controller.h  analog_joystick.cpp  analog_joystick.h  bios.cpp  bios.h  bus.cpp  bus.h  bus.inl  cdrom.cpp  cdrom.h  cdrom_async_reader.cpp  cdrom_async_reader.h  cdrom_subq_replacement.cpp  cdrom_subq_replacement.h  cheats.cpp  cheats.h  cheats_private.h  cheevos.cpp  cheevos.h  common_host.cpp  common_host.h  controller.cpp  controller.h  controller_helpers.h  core.cpp  core.h  core.props  core.vcxproj  core.vcxproj.filters  core_private.h  cpu_code_cache.cpp  cpu_code_cache.h  cpu_code_cache_private.h  cpu_core.cpp  cpu_core.h  (+224 more)
src/core-tests/: CMakeLists.txt  cheats_tests.cpp  core-tests.vcxproj  core-tests.vcxproj.filters  cpu_disasm_tests.cpp  stub_cpu.cpp
src/duckstation-libretro/: .gitignore  CMakeLists.txt  d3d11_host_display.cpp  d3d11_host_display.h  duckstation-libretro.vcxproj  duckstation-libretro.vcxproj.filters  gamesettings_to_libretro.py.gpg  libretro_audio_stream.cpp  libretro_audio_stream.cpp.gpg  libretro_audio_stream.h  (+37 more)
(+1951 files in other folders)
