add_subdirectory(fmt EXCLUDE_FROM_ALL)
add_subdirectory(stb EXCLUDE_FROM_ALL)
add_subdirectory(zlib EXCLUDE_FROM_ALL)
add_subdirectory(zstd EXCLUDE_FROM_ALL)
add_subdirectory(minizip EXCLUDE_FROM_ALL)
add_subdirectory(lzma EXCLUDE_FROM_ALL)
add_subdirectory(libchdr EXCLUDE_FROM_ALL)
add_subdirectory(xxhash EXCLUDE_FROM_ALL)
add_subdirectory(rapidjson EXCLUDE_FROM_ALL)
add_subdirectory(glslang EXCLUDE_FROM_ALL)
add_subdirectory(imgui EXCLUDE_FROM_ALL)
add_subdirectory(simpleini EXCLUDE_FROM_ALL)
add_subdirectory(vulkan EXCLUDE_FROM_ALL)
add_subdirectory(soundtouch EXCLUDE_FROM_ALL)
add_subdirectory(googletest EXCLUDE_FROM_ALL)
add_subdirectory(cpuinfo EXCLUDE_FROM_ALL)
add_subdirectory(fast_float EXCLUDE_FROM_ALL)
add_subdirectory(reshadefx EXCLUDE_FROM_ALL)
add_subdirectory(rcheevos EXCLUDE_FROM_ALL)

if(ENABLE_CUBEB)
  add_subdirectory(cubeb EXCLUDE_FROM_ALL)
endif()

if(ENABLE_OPENGL)
  add_subdirectory(glad EXCLUDE_FROM_ALL)
endif()

if(ENABLE_DISCORD_PRESENCE)
  add_subdirectory(discord-rpc EXCLUDE_FROM_ALL)
endif()

if(${CPU_ARCH} STREQUAL "aarch32" OR ${CPU_ARCH} STREQUAL "aarch64")
  add_subdirectory(vixl EXCLUDE_FROM_ALL)
endif()

if(${CPU_ARCH} STREQUAL "riscv64")
  add_subdirectory(biscuit EXCLUDE_FROM_ALL)
  add_subdirectory(riscv-disas EXCLUDE_FROM_ALL)
endif()

if(WIN32)
  add_subdirectory(d3d12ma EXCLUDE_FROM_ALL)
  add_subdirectory(winpixeventruntime EXCLUDE_FROM_ALL)
endif()

if(APPLE)
  add_subdirectory(spirv-cross EXCLUDE_FROM_ALL)
endif()
