add_library(jpeg
  include/jconfig.h
  include/jerror.h
  include/jmorecfg.h
  include/jpegint.h
  include/jpeglib.h
  src/jaricom.c
  src/jcapimin.c
  src/jcapistd.c
  src/jcarith.c
  src/jccoefct.c
  src/jccolor.c
  src/jcdctmgr.c
  src/jchuff.c
  src/jcinit.c
  src/jcmainct.c
  src/jcmarker.c
  src/jcmaster.c
  src/jcomapi.c
  src/jcparam.c
  src/jcprepct.c
  src/jcsample.c
  src/jctrans.c
  src/jdapimin.c
  src/jdapistd.c
  src/jdarith.c
  src/jdatadst.c
  src/jdatasrc.c
  src/jdcoefct.c
  src/jdcolor.c
  src/jdct.h
  src/jddctmgr.c
  src/jdhuff.c
  src/jdinput.c
  src/jdmainct.c
  src/jdmarker.c
  src/jdmaster.c
  src/jdmerge.c
  src/jdpostct.c
  src/jdsample.c
  src/jdtrans.c
  src/jerror.c
  src/jfdctflt.c
  src/jfdctfst.c
  src/jfdctint.c
  src/jidctflt.c
  src/jidctfst.c
  src/jidctint.c
  src/jinclude.h
  src/jmemmgr.c
  src/jmemnobs.c
  src/jmemsys.h
  src/jquant1.c
  src/jquant2.c
  src/jutils.c
  src/jversion.h
  src/transupp.c
  src/transupp.h
)

target_include_directories(jpeg PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
target_include_directories(jpeg PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src")
disable_compiler_warnings_for_target(jpeg)

add_library(JPEG::JPEG ALIAS jpeg)
